added regions route for get regions and districts
