# app/Models/Region.php
@@ -2,10 +2,16 @@
 
 namespace App\Models;
 
+use App\Models\District;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
 class Region extends Model
 {
     use HasFactory;
+
+    public function districts()
+    {
+        return $this->hasMany(District::class);
+    }
 }
